--- a/NodeExample1/package.json
+++ b/NodeExample1/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "NodeExample1",
+  "name": "node",
   "version": "0.1.0",
   "description": "NodeExample1",
   "main": "ch02_test0.js",
   "scripts": {
     "test": "echo \"Error: no test specified! Configure in package.json\" && exit 1"
   },
-  "repository": "",
   "keywords": [
     "node.js",
     "eclipse",
@@ -14,11 +13,11 @@
   ],
   "author": "",
   "license": "MIT",
-  "readmeFilename": "README.md",
   "dependencies": {
     "moment": "^2.16.0",
-    "nconf": "^0.8.4",
+    "nconf": "^0.10.0",
     "winston": "^2.3.0",
     "winston-daily-rotate-file": "^1.3.1"
-  }
+  },
+  "devDependencies": {}
 }
